good camera follow

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <script src="src/CGUI.js"></script>
     <script src="src/CPhysics.js"></script>
     <script src="src/Bus.js"></script>
+    <script src="src/CMission.js"></script>
+    <script src="src/CTerrain.js"></script>
 
     <script src="flightsim.js"></script>
 </body>
