--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="src/Bus.js"></script>
     <script src="src/CMission.js"></script>
     <script src="src/CTerrain.js"></script>
+    <script src="src/CRecorder.js"></script>
 
     <script src="flightsim.js"></script>
 </body>
